[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Matthew Russell <matthewjohnrussell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day_1"
path = "src/bin/day_1.rs"

[[bin]]
name = "day_2"
path = "src/bin/day_2.rs"

[[bin]]
name = "day_3"
path = "src/bin/day_3.rs"
